<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/email_login"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="mimiKeene@denelho.com"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password_login"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login" />


</LinearLayout>